--- a/res/layout/item_pic.xml
+++ b/res/layout/item_pic.xml
@@ -10,4 +10,12 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ic_launcher" />
 
+    <TextView
+        android:id="@+id/tvTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"
+        android:text="TextView" />
+
 </LinearLayout>
