--- a/res/layout/activity_one_pic.xml
+++ b/res/layout/activity_one_pic.xml
@@ -6,12 +6,12 @@
     tools:context=".OnePicActivity" >
 
     <Gallery
-        android:id="@+id/gallery"
+        android:id="@+id/gallery1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="30dp"
-       />
-    
+        android:layout_margin="20dp"
+         />
+
 </RelativeLayout>
