--- a/res/layout/item_pic.xml
+++ b/res/layout/item_pic.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/ivPic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_margin="10dp"
         android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="10dp"
+        android:layout_alignLeft="@+id/ivPic"
+        android:layout_below="@+id/ivPic"
+        android:layout_marginLeft="29dp"
         android:text="TextView" />
 
-</LinearLayout>
+</RelativeLayout>
